--- a/index.html
+++ b/index.html
@@ -159,25 +159,25 @@
         <label>🏭 Profession</label>
         <select name="profession" id="profession">
           <option value=""></option>
-          <option>Businessman</option>
-          <option>Engineer</option>
-          <option>Shopkeeper</option>
+          <option>Retired</option>
+          <option>Businessman,</option>
           <option>Doctor</option>
           <option>Teacher</option>
-          <option>Lawyer</option>
           <option>Government Employee</option>
+          <option>Engineer</option>
+          <option>Lawyer</option>
           <option>Private Employee</option>
           <option>IT Professional</option>
-          <option>Driver</option>
-          <option>Farmer</option>
-          <option>Plumber</option>
-          <option>Electrician</option>
-          <option>Carpenter</option>
-          <option>Security Guard</option>
-          <option>Housewife / Homemaker</option>
-          <option>Student</option>
           <option>Freelancer</option>
-          <option>Retired</option>
+          <option>Farmer</option>
+          <option>Housewife / Homemaker</option>
+          <option>Electrician</option>
+          <option>Shopkeeper</option>
+          <option>Security Guard</option>
+          <option>Driver</option>
+          <option>Plumber</option>
+          <option>Carpenter</option>
+          <option>Student</option>
           <option>Unemployed / Looking</option>
         </select>
       </div>
