--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <select name="profession" id="profession">
           <option value=""></option>
           <option>Retired</option>
-          <option>Businessman,</option>
+          <option>Businessman</option>
           <option>Doctor</option>
           <option>Teacher</option>
           <option>Government Employee</option>
