--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <span class="logo-wrap"><img src="logo.png" alt="Alpha"></span>
     <h1>Line 1 — Player Intake</h1>
   </div>
-  <div class="note">Fill the details below. Player ID must be from <b>A01–A20</b>.</div>
+  <div class="note">Fill the details below. Player ID must be from <b>X01–X30</b>.</div>
 
   <form id="line1Form" class="card">
     <div class="grid">
