--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
         /* =========================
            CONFIG: set your endpoints
            ========================= */
-        const SCRIPT_URL_LINE1 = 'https://script.google.com/macros/s/AKfycbzjna6m4tmO2nN3f75P8iSSciwGUrN5CpGiBrjVdRGkCIFeOOyjfKJn6oskR6cnxrwzsw/exec';
+        const SCRIPT_URL_LINE1 = 'https://script.google.com/macros/s/AKfycbwxLok8ri5RUatlwdGIFyeN7voXBOmfEQL40L1waXfthNFH3AcEcc8tQIqTkjFVSq-aIA/exec
         const SCRIPT_URL_LINE2 = 'https://script.google.com/macros/s/AKfycbyw_04eWrvnHktSpI0iuoutd_Fs3HMfUn6d6gz0xeIJj4OzleSrJOIIWmQNgqSOdmTz/exec';
 
         /* Tabs */
